--- a/P1Board/src/main/resources/application.properties
+++ b/P1Board/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+server.port = 8081
+
+spring.datasource.url=jdbc:mysql://localhost:3306/pboard?autoReconnect=true
+spring.datasource.username=root
+spring.datasource.password=4752
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#encoding
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
 
