--- a/P1Board/src/main/resources/application.properties
+++ b/P1Board/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port = 8081
 
-spring.datasource.url=jdbc:mysql://localhost:3306/pboard?autoReconnect=true
+spring.datasource.url=jdbc:mysql://localhost:3306/board?autoReconnect=true
 spring.datasource.username=root
 spring.datasource.password=4752
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -9,4 +9,17 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
+
+#jpa
+spring.jpa.generate-ddl=true
+spring.jpa.database=mysql
+spring.jpa.show-sql=true
+
+#thymeleaf
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
+spring.thymeleaf.check-template-location=true
+
+
 
