--- a/P1Board/src/main/resources/application.properties
+++ b/P1Board/src/main/resources/application.properties
@@ -21,5 +21,7 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 spring.thymeleaf.check-template-location=true
 
+spring.jackson.property-naming-strategy=SNAKE_CASE
+
 
 
