--- a/P1Board/src/main/resources/application.properties
+++ b/P1Board/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port = 8081
 
-spring.datasource.url=jdbc:mysql://localhost:3306/board?autoReconnect=true
+spring.datasource.url=jdbc:mysql://localhost:3306/board?serverTimezone=UTC&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=4752
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #encoding
